# kindle-ocr

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/kindle_ocr/: main.py
src/kindle_to_pdf/: __init__.py  main.py  ocr.py
src/vision_api_ocr/: __init__.py  main.py
