[project]
name = "kindle-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
]
