[project]
name = "kindle-ocr"
version = "0.1.0"
description = "Kindleの本を自動的にスクリーンショット撮影し、OCRでテキスト化してGoogle Driveにアップロードするツール"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-vision>=3.10.1",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.1",
]

[project.scripts]
kindle-ocr = "kindle_ocr.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle_ocr"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
